--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ ul {
 }
 
 li {
-
+  display: inline-block;
   font-size: 30px;
   list-style-type: none;
   padding: 10px;
@@ -128,6 +128,33 @@ li span {
 .complete {
   position: relative;
   top: 60px;
+}
+
+.complete-title {
+  animation: complete 4s infinite;
+}
+
+@keyframes complete {
+  0% {
+    color: rgba(238, 13, 13, 0.85);
+  }
+
+  25% {
+    color: rgba(204, 207, 13, 0.986);
+  }
+
+  50% {
+    color: rgba(36, 253, 7, 0.85);
+    transform: scale(1.75);
+  }
+
+  75% {
+    color: rgba(7, 65, 255, 0.85);
+  }
+
+  100% {
+    color: rgba(238, 13, 238, 0.85);
+  }
 }
 
 
